# TOG_MB_GROEP12

./: .gitignore  CFG.cpp  CFG.h  CFG.json  CFG.json.hash  CMakeLists.txt  DQL.json  LALR.cpp  LALR.h  LICENSE  README.md  SQLGuard.cpp  SQLGuard.h  common.h  inputCFG.json  main.cpp  parsetable.json  validator.cpp  validator.h
.github/workflows/: build.yml
auth/: RBACManager.cpp  RBACManager.h  User.cpp  User.h  UserRole.h
core/: AST.h  DotGlobals.h  Token.h
dot/: ADM_10_ast.dot  ADM_11_ast.dot  ADM_12_ast.dot  ADM_13_ast.dot  ADM_14_ast.dot  ADM_15_ast.dot  ADM_17_ast.dot  ADM_18_ast.dot  ADM_19_ast.dot  ADM_1_ast.dot  ADM_20_ast.dot  ADM_21_ast.dot  ADM_5_ast.dot  ADM_7_ast.dot  ADM_8_ast.dot  ADM_9_ast.dot
lexer/: Keywords.h  Lexer.cpp  Lexer.h
parser/: LALRParser.cpp  LALRParser.h
security/: SchemaSensitiveDetector.cpp  SchemaSensitiveDetector.h  SecurityAnalyzer.cpp  SecurityAnalyzer.h  SecurityTypes.h  TaintAnalyzer.cpp  TaintAnalyzer.h
utils/: AuditLogger.cpp  AuditLogger.h  QueryRunner.cpp  QueryRunner.h
